distance space material

--- a/common/frames.tex
+++ b/common/frames.tex
@@ -559,9 +559,9 @@ Let $\setxZp{\vx_n}$ and $\setxZp{\vy_n}$ be \structe{Schauder bases} of a \stru
 %--------------------------------------
 Let $\spO\eqd\toplinspaceX$ be a topological linear space.
 Let $\linspan\setA$ be the \structe{span} of a set $\setA$\ifsxref{frames}{def:span}.
-Let $\Ff(\omega)$ and $\Fg(\omega)$ be the \ope{Fourier transform}s \xref{def:ft} of the
+Let $\Ff(\omega)$ and $\Fg(\omega)$ be the \ope{Fourier transform}s\ifsxref{harFour}{def:ft} of the
 functions $\ff(x)$ and $\fg(x)$, respectively, in $\spLLR$ \xref{def:spLLR}.
-Let $\Da(\omega)$ be the \ope{DTFT} \xref{def:dtft} of a sequence $\seqxZ{a_n}$ in $\spllR$ \xref{def:spllR}.
+Let $\Da(\omega)$ be the \ope{DTFT}\ifsxref{dtft}{def:dtft} of a sequence $\seqxZ{a_n}$ in $\spllR$ \xref{def:spllR}.
 \lembox{
   \brb{\begin{array}{FMD}
     (1). & $\setxZ{\opTrn^n\ff}$ is a \structe{Schauder basis} for $\spO$ & and \\
@@ -580,15 +580,15 @@ Let $\spV_0'$ be the space spanned by $\setxZ{\opTrn^n\fphi}$.
   \Ff(\omega)
     &\eqd \opFT\ff
     &&    \text{by definition of $\opFT$}
-    &&    \text{\xref{def:opFT}}
+    &&    \text{\ifsxref{harFour}{def:opFT}}
   \\&=    \opFT\sum_{n\in\Z} a_n \opTrn\fg
     &&    \text{by (2)}
   \\&=    \sum_{n\in\Z} a_n \opFT\opTrn\fg
   \\&=    \mcom{\sum_{n\in\Z} a_n e^{-i\omega n}}{$\Da(\omega)$}\mcom{\opFT\fg}{$\Fg(\omega)$}
-    &&    \text{by \prefp{cor:FTD}}
+    &&    \text{\ifxref{transop}{cor:FTD}}
   \\&=    \Da(\omega)\Fg(\omega)
     &&    \text{by definition of $\opDTFT$ and $\opFT$}
-    &&    \text{by \xxref{def:dtft}{def:opFT}}
+    &&    \text{\ifsxref{dtft}{def:dtft}\ifsxref{harFour}{def:opFT}}
   %  &\eqd \cft\int_\R \ff(x) e^{-i\omega x}\dx
   %  &&    \text{by \prefp{def:opFT}}
   %\\&=    \cft\int_\R \sum_{n\in\Z}a_n \fg(x-n) e^{-i\omega x}\dx
@@ -1987,7 +1987,7 @@ Let $\setxZp{\vx_n}$ be a set of vectors in a \structe{Hilbert space}\ifsxref{se
 \label{thm:blo}
 %--------------------------------------
 %Let $\spX$ be a Hilbert space.
-Let $\Ff(\omega)$ be the \ope{Fourier Transform} \xref{def:ft} of a function $\ff\in\spLLR$.
+Let $\Ff(\omega)$ be the \ope{Fourier Transform}\ifsxref{harFour}{def:ft} of a function $\ff\in\spLLR$.
 \thmbox{
   \brb{\begin{array}{F>{\ds}lD}
     1. & \text{$\setxZ{\opTrn^n\fg}$ is a \structe{Riesz basis} for $\spLLR$} & and \\ \\
