--- a/common/metric.tex
+++ b/common/metric.tex
@@ -284,6 +284,7 @@ Proof by induction:
 \end{align*}
 \end{proof}
 
+\ifdochasnot{distance}{
 \prefpp{sec:topmetric} presents some topological properties of metric spaces.
 However the property of \prope{boundedness} (next definition) is fundamentally a metric space concept, 
 not a topological one.\cittrpg{munkres2000}{121}{0131816292}
@@ -301,7 +302,9 @@ Let $\metspaceX$ be a \structe{metric space} \xref{def:metric}.
   \\\qquad$\sup\set{\metric{x}{y}}{x,y\in\setA}<\infty$
 \end{array}}
 \end{definition}
+}
 
+\ifdochasnot{distance}{
 In a \structe{metric space} \xref{def:metric}\index{space!metric},
 it is sometimes useful to know the maximum distance between any two points in the set.
 This maximum distance is called the \fncte{diameter} of the set 
@@ -312,7 +315,6 @@ The \fncte{diameter} is an example of a broader class of functions called
   \citer{hahn1948},
   \citor{choquet1954}
   }
-
 %---------------------------------------
 \begin{definition}
 \label{def:diam}
@@ -336,6 +338,7 @@ Let $\metspaceX$ be a \structe{metric space} \xref{def:metric}.
     \end{array}\right.$
 \end{array}}
 \end{definition}
+}
 
 %%---------------------------------------
 %\begin{remark}
@@ -354,35 +357,10 @@ Let $\metspaceX$ be a \structe{metric space} \xref{def:metric}.
 %\end{align*}
 %\end{proof}
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 %=======================================
 \section{Open and closed balls}
 %=======================================
+\ifdochasnot{distance}{
 \pref{def:ball} (next) defines the \structe{open ball}.
 In a \structe{metric space} \xref{def:metric}\index{space!metric}, 
 sets are often specified in terms of an \prope{open ball};
@@ -406,6 +384,7 @@ Let $\metspaceX$ be a \structe{metric space} \xref{def:metric}\index{space!metri
 \ballc{x}{r} \eqd \set{y\in\setX}{\metric{x}{y}\le r}.
 \end{array}}
 \end{definition}
+}
 
 Open balls will often ``appear" different in different metric spaces. 
 Some examples include the following \xref{ex:taxicab}:\\
