--- a/common/negation.tex
+++ b/common/negation.tex
@@ -73,7 +73,7 @@
    %for 
    it is by nature the starting-point of all the other axioms as well.}
   \citetblt{
-    \citorpu{aristotleMeta4}{4.1005b}{http://www.perseus.tufts.edu/cgi-bin/ptext?lookup=Aristot.+Met.+4.1005b}
+    \citerpu{aristotleMeta4}{4.1005b}{http://www.perseus.tufts.edu/cgi-bin/ptext?lookup=Aristot.+Met.+4.1005b}
     %image: & \url{http://upload.wikimedia.org/wikipedia/commons/9/98/Sanzio_01_Plato_Aristotle.jpg}
     }
 
@@ -126,12 +126,12 @@
 \begin{definition}
 \footnote{
   \citerppg{dunn1996}{4}{6}{3110876809},
-  \citerppgc{dunn1999}{24}{26}{0792355695}{2 \scshape The Kite of Negations}
+  \citerppgc{dunn1999}{24}{26}{0792355695}{2 {\scshape The Kite of Negations}}
   }
 \label{def:negsub}
 %---------------------------------------
 %Let $\intcc{\lzero}{\lid}$ be an \structe{interval} \xref{def:intcc} in $\opair{\R}{\orela}$.
-Let $\latL\eqd\latbX$ be a \structe{bounded lattice} \xref{def:latb}.
+Let $\latL\eqd\latbX$ be a \structe{bounded lattice} \ifsxref{latb}{def:latb}.
 \defbox{
   \begin{array}{>{\indentx}lclCD}
     \mc{5}{M}{A \structe{function} $\negat\in\clFxx$ is a \fnctd{subminimal negation} on $\latL$ if}\\
@@ -184,7 +184,7 @@ Then the \prope{antitone} property and $x\orel y$ tells us ($\implies$) that
 \label{def:negfuz}
 %---------------------------------------
 %Let $\intcc{\lzero}{\lid}$ be an \structe{interval} \xref{def:intcc} in $\opair{\R}{\orela}$.
-Let $\latL\eqd\latbX$ be a \structe{bounded lattice} \xref{def:latb}.
+Let $\latL\eqd\latbX$ be a \structe{bounded lattice} \ifsxref{latb}{def:latb}.
 \defbox{
   \begin{array}{>{\indentx}FlclCDD}
     \mc{7}{M}{A \structe{function} $\negat\in\clFxx$ is a \fnctd{negation}, or \fnctd{minimal negation}, on $\latL$ if}
@@ -223,7 +223,7 @@ Let $\latL\eqd\latbX$ be a \structe{bounded lattice} \xref{def:latb}.
 \label{def:negorm}
 %---------------------------------------
 %Let $\intcc{\lzero}{\lid}$ be an \structe{interval} \xref{def:intcc} in $\opair{\R}{\orela}$.
-Let $\latL\eqd\latbX$ be a \structe{bounded lattice} \xref{def:latb}.
+Let $\latL\eqd\latbX$ be a \structe{bounded lattice} \ifsxref{latb}{def:latb}.
 \defbox{
   \begin{array}{>{\indentx}FlclCDD}
     \mc{7}{M}{A \fncte{minimal negation} $\negat$ is a \fnctd{de Morgan negation} if}
@@ -263,7 +263,7 @@ The \prope{Kleene condition} is basically a weakened form of the \prope{non-cont
 %\label{def:negorm}
 %\label{def:negmorm}
 %%---------------------------------------
-%Let $\latL\eqd\latbX$ be a \structe{bounded lattice} \xref{def:latb}.
+%Let $\latL\eqd\latbX$ be a \structe{bounded lattice} \ifsxref{latb}{def:latb}.
 %\defbox{
 %  \begin{array}{>{\indentx}FlclCDD}
 %    \mc{7}{M}{An \fncte{ortho negation} $\negat$ is an \fnctd{orthomodular negation} if}
@@ -306,8 +306,8 @@ The \prope{Kleene condition} is basically a weakened form of the \prope{non-cont
 %\label{def:lator}
 %\label{def:latorm}
 %---------------------------------------
-Let $\latL\eqd\latnX$ be a \structe{bounded lattice} \xref{def:latb} with a function $\negat$ in $\clFxx$.
-%Let $\negat$ be a function on a \structe{bounded lattice} $\latbX$ \xref{def:latb}.
+Let $\latL\eqd\latnX$ be a \structe{bounded lattice} \ifsxref{latb}{def:latb} with a function $\negat$ in $\clFxx$.
+%Let $\negat$ be a function on a \structe{bounded lattice} $\latbX$ \ifsxref{latb}{def:latb}.
 %Let $\latL\eqd\latnX$.
 \defboxt{
   %\begin{array}{MM}
@@ -345,7 +345,7 @@ Let $\latL\eqd\latnX$ be a \structe{bounded lattice} \xref{def:latb} with a func
   }
 \label{lem:latn_demorgan_ineq}
 %---------------------------------------
-Let $\negat\in\clFxx$ be a function on a \structe{bounded lattice} $\latL\eqd\latbX$ \xref{def:latb}.
+Let $\negat\in\clFxx$ be a function on a \structe{bounded lattice} $\latL\eqd\latbX$ \ifsxref{latb}{def:latb}.
 \lembox{
   \mcom{\brbr{x\orel y \implies \negat{y}\orel \negat{x}}}{\prope{antitone}}
   \implies
@@ -511,7 +511,7 @@ Let $\negat\in\clFxx$ be a function on a \structe{lattice} $\latL\eqd\latX$ \xre
     \\&\oreld \lid
       && \text{by \prope{weak double negation} hypothesis (1)}
     \\&\implies \negat\lzero=\lid
-      && \text{by \prope{upper bound} property \xref{def:latb}}
+      && \text{by \prope{upper bound} property \ifsxref{latb}{def:latb}}
   \end{align*}
 \end{proof}
 
@@ -548,7 +548,7 @@ Let $\negat\in\clFxx$ be a function on a \structe{lattice} $\latL\eqd\latX$ \xre
   }
 \label{lem:latn_biant_bnd}
 %---------------------------------------
-Let $\negat\in\clFxx$ be a function on a \structe{bounded lattice} $\latL\eqd\latbX$ \xref{def:latb}.
+Let $\negat\in\clFxx$ be a function on a \structe{bounded lattice} $\latL\eqd\latbX$ \ifsxref{latb}{def:latb}.
 \lembox{
   \brb{\begin{array}{FMCD}
     (A). & $\negat$ is \prope{bijective}  & & and \\
@@ -609,7 +609,7 @@ Let $\negat\in\clFxx$ be a function on a \structe{bounded lattice} $\latL\eqd\la
 \begin{theorem}
 \label{thm:latn_intuitionistic}
 %---------------------------------------
-Let $\negat\in\clFxx$ be a function on a \structe{bounded lattice} $\latL\eqd\latbX$ \xref{def:latb}.
+Let $\negat\in\clFxx$ be a function on a \structe{bounded lattice} $\latL\eqd\latbX$ \ifsxref{latb}{def:latb}.
 \thmbox{
   \brb{\begin{array}{M}
     $\negat$ is an\\
@@ -629,7 +629,7 @@ This follows directly from \prefpp{def:latn} and \prefpp{lem:latn_noncon}.
 \begin{theorem}
 \label{thm:latn_fuzzy}
 %---------------------------------------
-Let $\negat\in\clFxx$ be a function on a \structe{bounded lattice} $\latL\eqd\latbX$ \xref{def:latb}.
+Let $\negat\in\clFxx$ be a function on a \structe{bounded lattice} $\latL\eqd\latbX$ \ifsxref{latb}{def:latb}.
 \thmbox{
   \brb{\begin{array}{M}
     $\negat$ is a\\
@@ -650,7 +650,7 @@ This follows directly from \prefpp{def:negfuz} and \prefpp{lem:latn_boundaries}.
 \label{thm:latn_demorganineq}
 %---------------------------------------
 %Let $\latL\eqd\latnX$ be a \structe{lattice with negation} \xref{def:latn}.
-Let $\negat\in\clFxx$ be a function on a \structe{bounded lattice} $\latL\eqd\latbX$ \xref{def:latb}.
+Let $\negat\in\clFxx$ be a function on a \structe{bounded lattice} $\latL\eqd\latbX$ \ifsxref{latb}{def:latb}.
 \thmbox{
   \brb{\begin{array}{M}
     $\negat$ is a\\
@@ -673,7 +673,7 @@ This follows directly from \prefpp{def:latn} and \prefpp{lem:latn_demorgan_ineq}
 \label{thm:latn_demorgan}
 %---------------------------------------
 %Let $\latL\eqd\latnX$ be a \structe{lattice with negation} \xref{def:latn}.
-Let $\negat\in\clFxx$ be a function on a \structe{bounded lattice} $\latL\eqd\latbX$ \xref{def:latb}.
+Let $\negat\in\clFxx$ be a function on a \structe{bounded lattice} $\latL\eqd\latbX$ \ifsxref{latb}{def:latb}.
 \thmbox{%
   \brbr{\begin{array}{M}
     $\negat$ is a\\
@@ -700,7 +700,7 @@ Let $\negat\in\clFxx$ be a function on a \structe{bounded lattice} $\latL\eqd\la
   }
 \label{thm:latn_ortho}
 %---------------------------------------
-Let $\negat\in\clFxx$ be a function on a \structe{bounded lattice} $\latL\eqd\latbX$ \xref{def:latb}.
+Let $\negat\in\clFxx$ be a function on a \structe{bounded lattice} $\latL\eqd\latbX$ \ifsxref{latb}{def:latb}.
 \thmbox{
   \brb{\begin{array}{M}
     $\negat$ is an\\
@@ -782,7 +782,7 @@ Let $\negat\in\clFxx$ be a function on a \structe{bounded lattice} $\latL\eqd\la
 \label{ex:neg_discrete}
 \label{ex:dneg}
 %---------------------------------------
-Let $\latL\eqd\latnX$ be a \structe{bounded lattice} \xref{def:latb} with a function $\negat\in\clFxx$.
+Let $\latL\eqd\latnX$ be a \structe{bounded lattice} \ifsxref{latb}{def:latb} with a function $\negat\in\clFxx$.
 \exboxt{
   The function $\negat{x}$ defined as
   \\\indentx$\negat{x} \eqd \brbl{\begin{array}{cM}
@@ -830,7 +830,7 @@ and have the \prope{boundary condition} $\negat\lid=\lzero$.
   }
 \label{ex:neg_dualdiscrete}
 %---------------------------------------
-Let $\latL\eqd\latnX$ be a \structe{bounded lattice} \xref{def:latb} with a function $\negat\in\clFxx$.
+Let $\latL\eqd\latnX$ be a \structe{bounded lattice} \ifsxref{latb}{def:latb} with a function $\negat\in\clFxx$.
 \exboxp{
   The function $\negat{x}$ defined as
   \\\indentx$\negat{x} \eqd \brbl{\begin{array}{cM}
