--- a/common/ptspace.tex
+++ b/common/ptspace.tex
@@ -32,7 +32,7 @@
 %  }
 %\end{definition}
 
-This paper introduces a new relation called the \rele{power triangle inequality} \xref{def:trirel}.
+This chapter introduces a relation called the \rele{power triangle inequality} \xref{def:trirel}.
 It is a generalization of other common relations, including the \rele{triangle inequality} \xref{def:trirels}.
 The \rele{power triangle inequality} is defined in terms of a function herein called the \fncte{power triangle function} (next definition).
 This function is a special case of the \fncte{power mean} with $\xN=2$ and $\lambda_1=\lambda_2=\frac{1}{2}$ \xref{def:pmean}.
@@ -41,6 +41,9 @@ to a free parameter $p\in\Rx$ \xref{thm:pmean_continuous}.
 This fact is inherited and exploited by the \rele{power triangle inequality} \xref{cor:tri_mono}.
 %---------------------------------------
 \begin{definition}
+\footnote{
+  \citeP{greenhoe2015pds}
+  }
 \label{def:ptf}
 %---------------------------------------
 Let $\dspaceX$ be a \structe{distance space} \xref{def:dspace}.
@@ -83,7 +86,7 @@ which \emph{are} similar to the definition of \fncte{power triangle function} of
 \label{def:ptineq}
 %---------------------------------------
 Let $\dspaceX$ be a \structe{distance space}.
-Let $\clRxxx$ be the set of all trinomial \structe{relation}s \xref{def:clRxy} on $\setX$.
+Let $\clRxxx$ be the set of all trinomial \structe{relation}s\ifsxref{relation}{def:clRxy} on $\setX$.
 \defboxp{
   A relation $\trirelD$ in $\clRxxx$
   is a \reld{power triangle inequality} on $\dspaceX$ if
@@ -215,7 +218,7 @@ a \structe{distance space} $\dspaceX$.
   \citerpgc{kirk2014}{113}{3319109278}{Definition 12.1},
   \citerpg{deza2014}{7}{3662443422}
   }
-\label{def:metric}
+%\label{def:metric}
 \label{def:mspace}
 \label{def:nmetric}
 \label{def:pdspace_spaces}
