--- a/common/relneg.tex
+++ b/common/relneg.tex
@@ -46,7 +46,7 @@ Let $\latocd$ be an \structe{orthocomplemented lattice} \xref{def:latoc}.
   \\&\implies \lid \orel y\join x^\ocop
     && \text{by \prope{excluded middle} property of \structe{ortho lattice}s \xref{def:latoc}}
   \\&\implies x^\ocop\join y = \lid
-    && \text{by \prope{upper bounded} property of \structe{bounded lattices} \xref{def:latb}}
+    && \text{by \prope{upper bounded} property of \structe{bounded lattices} \ifsxref{latb}{def:latb}}
   \\
   x \orel y
     &\implies x\meet y^\ocop \orel y\meet y^\ocop
@@ -54,7 +54,7 @@ Let $\latocd$ be an \structe{orthocomplemented lattice} \xref{def:latoc}.
   \\&\implies x\meet y^\ocop \orel \lzero
     && \text{by \prope{non-contradiction} property of \structe{ortho lattice}s \xref{def:latoc}}
   \\&\implies x\meet y^\ocop = \lzero
-    && \text{by \prope{lower bounded} property of \structe{bounded lattices} \xref{def:latb}}
+    && \text{by \prope{lower bounded} property of \structe{bounded lattices} \ifsxref{latb}{def:latb}}
 \end{align*}
 \end{proof}
 
@@ -145,7 +145,7 @@ Let $\latocd$ be an \structe{orthocomplemented lattice} \xref{def:latoc}.
   \\&\implies x \meet y \orel \lzero
     && \text{by \prope{non-contradiction} property of \structe{ortho negation} \xref{def:negor}}
   \\&\implies x \meet y = \lzero
-    && \text{by \prope{lower bound} property of \structe{bounded lattices} \xref{def:latb}}
+    && \text{by \prope{lower bound} property of \structe{bounded lattices} \ifsxref{latb}{def:latb}}
   \\
   \\
   x \orthog y
@@ -158,7 +158,7 @@ Let $\latocd$ be an \structe{orthocomplemented lattice} \xref{def:latoc}.
   \\&\implies \lid \orel x^\ocop \join y^\ocop 
     && \text{by \prope{excluded middle} property of \structe{ortho lattice}s \xref{thm:latn_ortho}}
   \\&\implies x^\ocop \join y^\ocop
-    && \text{by \prope{upper bound} property of \structe{bounded lattice}s \xref{def:latb}}
+    && \text{by \prope{upper bound} property of \structe{bounded lattice}s \ifsxref{latb}{def:latb}}
 \end{align*}
 \end{proof}
 
@@ -253,7 +253,7 @@ then $x$ and $y$ commute in the \ope{Sasaki projection} $\sasaki{x}{y}$ on $\lat
 %---------------------------------------
 \begin{definition}
 \footnote{
-  %\citorp{nakamura1957}{158},
+  %\citerp{nakamura1957}{158},
   \citerpg{kalmbach1983}{20}{0123945801},
   \citerpc{holland1970}{79}{A. Commutativity},
   \citerpc{maeda1958}{227}{Hilfssatz (Lemma) XII.1.2},
@@ -303,13 +303,13 @@ Let $\latL\eqd\latocd$ be an \structe{orthocomplemented lattice}. % \xref{def:la
     \begin{align*}
       \brp{x\meet \lzero} \join \brp{x \meet \lzero^\ocop}
         &= \lzero \join \brp{x \meet \lzero^\ocop}
-        && \text{by \prope{lower bound} property of \structe{bounded lattice}s \xref{def:latb}}
+        && \text{by \prope{lower bound} property of \structe{bounded lattice}s \ifsxref{latb}{def:latb}}
       \\&= \lzero \join \brp{x \meet \lid}
         && \text{by \prope{boundary condition} of \structe{ortho negation} \xref{thm:latn_ortho}}
       \\&= \lzero \join \brp{x}
-        && \text{by \prope{upper bound} property of \structe{bounded lattice}s \xref{def:latb}}
+        && \text{by \prope{upper bound} property of \structe{bounded lattice}s \ifsxref{latb}{def:latb}}
       \\&= x
-        && \text{by \prope{lower bound} property of \structe{bounded lattice}s \xref{def:latb}}
+        && \text{by \prope{lower bound} property of \structe{bounded lattice}s \ifsxref{latb}{def:latb}}
       \\\implies& x \commutes \lzero
         && \text{by definition of $\commutes$ relation \xref{def:latoc_commutes}}
   \\
@@ -319,9 +319,9 @@ Let $\latL\eqd\latocd$ be an \structe{orthocomplemented lattice}. % \xref{def:la
   %  \begin{align*}
       \brp{\lzero \meet x} \join \brp{\lzero \meet x^\ocop}
         &= \lzero \join \brp{\lzero}
-        && \text{by \prope{lower bound} property of \structe{bounded lattice}s \xref{def:latb}}
+        && \text{by \prope{lower bound} property of \structe{bounded lattice}s \ifsxref{latb}{def:latb}}
       \\&= \lzero
-        && \text{by \prope{lower bound} property of \structe{bounded lattice}s \xref{def:latb}}
+        && \text{by \prope{lower bound} property of \structe{bounded lattice}s \ifsxref{latb}{def:latb}}
       \\\implies& \lzero \commutes x
         && \text{by definition of $\commutes$ relation \xref{def:latoc_commutes}}
   \\
@@ -331,13 +331,13 @@ Let $\latL\eqd\latocd$ be an \structe{orthocomplemented lattice}. % \xref{def:la
   %  \begin{align*}
       \brp{x\meet \lid} \join \brp{x \meet \lid^\ocop}
         &= x \join \brp{x \meet \lid^\ocop}
-        && \text{by \prope{lower bound} property of \structe{bounded lattice}s \xref{def:latb}}
+        && \text{by \prope{lower bound} property of \structe{bounded lattice}s \ifsxref{latb}{def:latb}}
       \\&= x \join \brp{x \meet \lzero}
         && \text{by \prope{boundary condition} of \structe{ortho negation} \xref{thm:latn_ortho}}
       \\&= \brp{x} \join \brp{\lzero}
-        && \text{by \prope{lower bound} property of \structe{bounded lattice}s \xref{def:latb}}
+        && \text{by \prope{lower bound} property of \structe{bounded lattice}s \ifsxref{latb}{def:latb}}
       \\&= x
-        && \text{by \prope{lower bound} property of \structe{bounded lattice}s \xref{def:latb}}
+        && \text{by \prope{lower bound} property of \structe{bounded lattice}s \ifsxref{latb}{def:latb}}
       \\\implies& x \commutes \lid
         && \text{by definition of $\commutes$ relation \xref{def:latoc_commutes}}
   \\
@@ -363,7 +363,7 @@ Let $\latL\eqd\latocd$ be an \structe{orthocomplemented lattice}. % \xref{def:la
       \\&= x \join \brp{\lzero}
         && \text{by \prope{non-contradiction} prop. of \fncte{ortho negation} \xref{def:negor}}
       \\&= x
-        && \text{by \prope{lower bound} property of \structe{bounded lattice}s \xref{def:latb}}
+        && \text{by \prope{lower bound} property of \structe{bounded lattice}s \ifsxref{latb}{def:latb}}
       \\\implies &x \commutes x
         && \text{by definition of $\commutes$ relation \xref{def:latoc_commutes}}
   \\
