--- a/common/topology.tex
+++ b/common/topology.tex
@@ -145,6 +145,8 @@ Let $\psetX$ be the \structe{power set} of a set $\setX$.
   }
 \label{ex:discretetop}
 \label{ex:indiscretetop}
+\label{ex:dts}
+\label{ex:idts}
 %---------------------------------------
 Let $\sssT{\sid}$ be the set of topologies on a set $\sid$ and
 $\pset{\sid}$ the \structe{power set} \xref{def:pset} on $\sid$.
