--- a/common/vsinprod.tex
+++ b/common/vsinprod.tex
@@ -651,7 +651,7 @@ For a function to be a norm, it must satisfy the four properties listed in
   \end{eqnarray*}
 
   \item Proof that $\norm{\vx+\vy}\le\norm{\vx}+\norm{\vy}$ (\prop{subadditive}): 
-        This is true by Minkowski's inequality \prefpo{thm:vsi_minkowski}
+        This is true by \ineqe{Minkowski's Inequality}\ifsxref{sums}{thm:lp_minkowski}.
 \end{enumerate}
 
   \item Proof that every inner product space is a normed linear space:\\
