msdsams warning clean-up, font warning cleanup

--- a/common/calculus.tex
+++ b/common/calculus.tex
@@ -6,6 +6,19 @@
 \chapter{Calculus}
 %=======================================
 
+\ifdochasnot{transop}{
+%---------------------------------------
+\begin{definition}
+\label{def:spXY}
+%---------------------------------------
+Let $\hxs{\setX}$ and $\hxs{\setY}$ be sets.
+\defbox{\begin{array}{M}
+  The space $\clFxy$ represents the set of all functions with \structe{domain} $\setX$ and \structe{range} $\setY$ such that
+  \\\indentx$\ds \hxs{\clFxy} \eqd \set{\ff(x)}{\ff(x):\setX\to\setY}$
+\end{array}}
+\end{definition}
+}
+
 %---------------------------------------
 \begin{definition}
 \label{def:spLLR}
