--- a/common/ptspace.tex
+++ b/common/ptspace.tex
@@ -219,7 +219,7 @@ a \structe{distance space} $\dspaceX$.
   \citerpg{deza2014}{7}{3662443422}
   }
 %\label{def:metric}
-\label{def:mspace}
+%\label{def:mspace}
 \label{def:nmetric}
 \label{def:pdspace_spaces}
 %---------------------------------------
@@ -957,13 +957,13 @@ Then for all $\opair{p}{\sigma}\in(\Rx\setd\setn{0})\times\Rp$,
 \end{enumerate}
 \end{proof}
 
-\begin{figure}[h]
-  \center
-  \includegraphics{../common/math/graphics/pdfs/ballinopen.pdf}
-  \caption{\structe{open set} (see \prefp{lem:tri_open}) \label{fig:ms_open} }
-\end{figure}
+%metric.tex \begin{figure}[h]
+%metric.tex   \center
+%metric.tex   \includegraphics{../common/math/graphics/pdfs/ballinopen.pdf}
+%metric.tex   \caption{\structe{open set} (see \prefp{lem:tri_open}) \label{fig:ms_open} }
+%metric.tex \end{figure}
 \pref{lem:tri_open} (next) demonstrates that every point in an open set is contained in an open ball that is 
-contained in the original open set (see also \prefp{fig:ms_open}).
+contained in the original open set \xref{fig:ms_open}.
 %---------------------------------------
 \begin{lemma}
 \label{lem:tri_open}
@@ -1054,7 +1054,7 @@ Then for all $\opair{p}{\sigma}\in(\Rx\setd\setn{0})\times\Rp$,
   %\citor{cauchy1821}
 %  ``$\to$" symbol: \citorpc{leathem1905}{13}{section III.11}  % referenced by bromwich1955 page 3
   }
-\label{thm:ms_converge}
+\label{thm:ms_converge_pdspace}
 \index{convergence!metric space}
 %---------------------------------------
 Let $\pdspaceX$ be a \structe{power distance space}.
@@ -1112,7 +1112,7 @@ However in a distance space with any \rele{power triangle inequality} \xref{def:
   \citerpg{rosenlicht}{51}{0486650383},
   \citerppgc{apostol1975}{72}{73}{0201002884}{Theorem 4.6}
   }
-\label{thm:convergent==>cauchy}
+\label{thm:convergent_cauchy_pdspace}
 %---------------------------------------
 Let $\pdspaceX$ be a \structe{power distance space}.
 %Let $\dspaceX$ be a \structe{distance space} \xrefh{def:dspace} with \rele{power triangle inequality} \xrefh{def:trirel} $\trirelD$
@@ -1509,7 +1509,7 @@ Then
 
 In \structe{distance space}s and \structe{topological space}s, limits of convergent sequences are in general \prope{not unique} 
 \xxref{ex:dspace_01}{ex:seq_xt31}.
-However \pref{thm:xn_to_xy} (next) demonstrates that, in a \structe{power distance space},
+However \pref{thm:xn_to_xy_pdspace} (next) demonstrates that, in a \structe{power distance space},
 limits \emph{are} unique.
 %---------------------------------------
 \begin{theorem}[\thmd{Uniqueness of limit}]
@@ -1518,7 +1518,7 @@ limits \emph{are} unique.
   \citerpg{rosenlicht}{46}{0486650383},
   \citerpgc{thomson2008}{32}{143484367X}{Theorem 2.8}
   }
-\label{thm:xn_to_xy}
+\label{thm:xn_to_xy_pdspace}
 %---------------------------------------
 Let $\pdspaceX$ be a \structe{power distance space}.
 Let $x,y,\in \setX$ and let $\seqn{x_n\in\setX}$ be an $\setX$-valued sequence.
@@ -1649,7 +1649,7 @@ Let $x,y,\in \setX$ and let $\seqn{x_n\in\setX}$ be an $\setX$-valued sequence.
 %  2. & $\balln$ is an \structe{open ball} in $\dspaceX$ &\implies& $\balln$ is \prope{open} in $\dspaceX$& \xref{cor:oball_open}.\\
 % %3. & \mc{3}{M}{$\baseB$ is a \structe{base} for a topology on $\setX$}                                            & \xref{ex:dspace_1n}.\footnotemark\\
 %  3. & $\baseB$ is the set of all \structe{open ball}s in $\dspaceX$ &\implies& $\baseB$ is a \structe{base} for a topology on $\setX$ & \xref{cor:tspace_base}.\\
-%  4. & $\seqn{x_n}$ is \prope{convergent} in $\dspaceX$ &\implies& limit is \prope{unique}                        & \xref{thm:xn_to_xy}.\\
+%  4. & $\seqn{x_n}$ is \prope{convergent} in $\dspaceX$ &\implies& limit is \prope{unique}                        & \xref{thm:xn_to_xy_pdspace}.\\
 %  5. & $\seqn{x_n}$ is \prope{convergent} in $\dspaceX$ &\implies& $\seqn{x_n}$ is \prope{Cauchy} in $\dspaceX$ & \xref{prop:convergent==>cauchy}.\\
 %\end{array}$}
 %\end{theorem}
@@ -1799,11 +1799,11 @@ Note the following about the pair $\dspaceRd$:
 
   \item In $\dspaceX$, the limits of \prope{convergent} sequences are \prope{unique}.
         This follows directly from the fact that $\pdspace{\R}{\distancen}{1}{2}$ is a \structe{power distance space} \xref{item:pdspace_21}
-        and by \prefp{thm:xn_to_xy}.
+        and by \prefp{thm:xn_to_xy_pdspace}.
 
   \item In $\dspaceX$, \prope{convergent} sequences are \prope{Cauchy}.
         This follows directly from the fact that $\pdspace{\R}{\distancen}{1}{2}$ is a \structe{power distance space} \xref{item:pdspace_21}
-        and by \prefp{thm:convergent==>cauchy}.
+        and by \prefp{thm:convergent_cauchy_pdspace}.
 \end{enumerate}
 \end{example}
 
