--- a/common/sty/math.sty
+++ b/common/sty/math.sty
@@ -174,6 +174,38 @@
 \newcommand{\trirel}{{\declareslashed{}{\vartriangle}{0}{0.1}{\bigcirc}\slashed{\bigcirc}}}%
 \newcommand{\trirelD}{\trirel(p,\sigma;\distancen)}% default power triangle relation
 
+%\DeclareMathSymbol{\relation} {\mathbin}{operators}{"24C7}   % circled R  general relation
+%\DeclareMathSymbol{\relationa}{\mathbin}{operators}{"24C8}   % circled S  alternative general relation
+%\DeclareMathSymbol{\relationb}{\mathbin}{operators}{"24C6}   % circled Q  second alternative general relation
+%\DeclareMathSymbol{\commutes} {\mathbin}{operators}{"24B8}   % circled C  commutes relation
+%\DeclareMathSymbol{\modular}  {\mathbin}{operators}{"24C2}   % circled M  modular relation
+%\DeclareMathSymbol{\distrib}  {\mathbin}{operators}{"24B9}   % circled D  distributive relation
+%\DeclareMathSymbol{\relid}    {\mathbin}{operators}{"24BE}   % circled I  distributive relation
+
+%\mathchardef\relation"24C7   % circled R  general relation
+%\mathchardef\relationa"24C8   % circled S  alternative general relation
+%\mathchardef\relationb"24C6   % circled Q  second alternative general relation
+%\mathchardef\commutes"24B8   % circled C  commutes relation
+%\mathchardef\modular"24C2   % circled M  modular relation
+%\mathchardef\distrib"24B9   % circled D  distributive relation
+%\mathchardef\relid"24BE   % circled I  distributive relation
+
+%\char\relation"24C7   % circled R  general relation
+%\char\relationa"24C8   % circled S  alternative general relation
+%\char\relationb"24C6   % circled Q  second alternative general relation
+%\char\commutes"24B8   % circled C  commutes relation
+%\char\modular"24C2   % circled M  modular relation
+%\char\distrib"24B9   % circled D  distributive relation
+%\char\relid"24BE   % circled I  distributive relation
+
+%\DeclareMathSymbol{\relation} {\mathbin}{XITSMath}{"24C7}   % circled R  general relation
+%\DeclareMathSymbol{\relationa}{\mathbin}{XITSMath}{"24C8}   % circled S  alternative general relation
+%\DeclareMathSymbol{\relationb}{\mathbin}{XITSMath}{"24C6}   % circled Q  second alternative general relation
+%\DeclareMathSymbol{\commutes} {\mathbin}{XITSMath}{"24B8}   % circled C  commutes relation
+%\DeclareMathSymbol{\modular}  {\mathbin}{XITSMath}{"24C2}   % circled M  modular relation
+%\DeclareMathSymbol{\distrib}  {\mathbin}{XITSMath}{"24B9}   % circled D  distributive relation
+%\DeclareMathSymbol{\relid}    {\mathbin}{XITSMath}{"24BE}   % circled I  distributive relation
+
 \DeclareUTFcharacter[\UTFencname]{x24C7}{\relation}    % circled R  general relation
 \DeclareUTFcharacter[\UTFencname]{x24C8}{\relationa}   % circled S  alternative general relation
 \DeclareUTFcharacter[\UTFencname]{x24C6}{\relationb}   % circled Q  second alternative general relation
@@ -181,6 +213,37 @@
 \DeclareUTFcharacter[\UTFencname]{x24C2}{\modular}     % circled M  modular relation
 \DeclareUTFcharacter[\UTFencname]{x24B9}{\distrib}     % circled D  distributive relation
 \DeclareUTFcharacter[\UTFencname]{x24BE}{\relid}       % circled I  distributive relation
+
+%https://tex.stackexchange.com/questions/161871/how-to-change-the-mathematical-symbol-class-of-a-unicode-math-symbol
+%\UnicodeMathSymbol{x24C7}{\relation} {\mathbin}{circled R}    % circled R  general relation
+%\UnicodeMathSymbol{x24C8}{\relationa}{\mathbin}{circled S}    % circled S  alternative general relation
+%\UnicodeMathSymbol{x24C6}{\relationb}{\mathbin}{circled Q}    % circled Q  second alternative general relation
+%\UnicodeMathSymbol{x24B8}{\commutes} {\mathbin}{circled C}    % circled C  commutes relation
+%\UnicodeMathSymbol{x24C2}{\modular}  {\mathbin}{circled M}    % circled M  modular relation
+%\UnicodeMathSymbol{x24B9}{\distrib}  {\mathbin}{circled D}    % circled D  distributive relation
+%\UnicodeMathSymbol{x24BE}{\relid}    {\mathbin}{circled I}    % circled I  distributive relation
+
+%\UnicodeMathSymbol{"026AC}{\mdsmwhtcircle}{\mathord}{medium small white circle}
+
+%https://tex.stackexchange.com/questions/161871/how-to-change-the-mathematical-symbol-class-of-a-unicode-math-symbol
+%\__um_process_symbol_noparse:nnn {"024C7}{\relation} {\mathbin}   % circled R  general relation
+%\__um_process_symbol_noparse:nnn {"024C8}{\relationa}{\mathbin}   % circled S  alternative general relation
+%\__um_process_symbol_noparse:nnn {"024C6}{\relationb}{\mathbin}   % circled Q  second alternative general relation
+%\__um_process_symbol_noparse:nnn {"024B8}{\commutes} {\mathbin}   % circled C  commutes relation
+%\__um_process_symbol_noparse:nnn {"024C2}{\modular}  {\mathbin}   % circled M  modular relation
+%\__um_process_symbol_noparse:nnn {"024B9}{\distrib}  {\mathbin}   % circled D  distributive relation
+%\__um_process_symbol_noparse:nnn {"024BE}{\relid}    {\mathbin}   % circled I  distributive relation
+
+%\um_process_symbol_noparse:nnn {"026AC}{\mdsmwhtcircle}{\mathbin}
+
+
+%\newcommand{\relation} {\text{\UTFrelation}}    % circled R  general relation
+%\newcommand{\relationa}{\text{\UTFrelationa}}   % circled S  alternative general relation
+%\newcommand{\relationb}{\text{\UTFrelationb}}   % circled Q  second alternative general relation
+%\newcommand{\commutes} {\text{\UTFcommutes}}    % circled C  commutes relation
+%\newcommand{\modular}  {\text{\UTFmodular}}     % circled M  modular relation
+%\newcommand{\distrib}  {\text{\UTFdistrib}}     % circled D  distributive relation
+%\newcommand{\relid}    {\text{\UTFrelid}}       % circled I  distributive relation
 
  \newcommand{\modulard}{\modular^\ast}% dual modularity relation
  \newcommand{\distribd}{\distrib^\ast}% dual distributivity relation
