bib warning reduction

--- a/common/bib/analysis.bib
+++ b/common/bib/analysis.bib
@@ -462,6 +462,7 @@
   author       = {Gerald Beer},
   title        = {Topologies on Closed and Closed Convex Sets},
   series       = {Mathematics and Its Applications},
+  publisher    = {Springer Science \& Business Media},
   volume       = {268},
   year         = {1993},
   month        = {October 31},
@@ -2489,7 +2490,7 @@
   author       = {Israel M. Gelfand and R. A. Minlos and Z. .Ya. Shapiro},
   title        = {Representations of the rotation and Lorentz groups and their applications},
   publisher    = {Courier Dover Publications},
-  author       = {Izrail' Moiseevich Gel'fand},
+  note         = {Izrail' Moiseevich Gel'fand},
   edition      = {reprint},
   translator   = {H. K. Farahat},
   language     = {English},
@@ -2810,7 +2811,6 @@
   author       = {Daniel J. Greenhoe},
   title        = {Properties of distance spaces with power triangle inequalities},
   journal      = {Carpathian Mathematical Publications},
-  issn         = {2313-0210},
   year         = {2016},
   volume       = {8},
   number       = {1},
@@ -2820,7 +2820,8 @@
   urlx         = {http://www.journals.pu.if.ua/index.php/cmp/article/view/483},
   urlr         = {http://www.researchgate.net/publication/281831459},
   urlp         = {https://peerj.com/preprints/2055},
-  issn         = {2075-9827},
+  issnx        = {2075-9827},
+  issnx        = {2313-0210},
   language     = {English},
   note         = {preprint versions are available at \url{http://www.researchgate.net/publication/281831459} and \url{https://peerj.com/preprints/2055}; and postprint version at \url{https://github.com/dgreenhoe/pdfs/blob/master/2015pds.pdf}},
   notex        = {\url{https://www.researchgate.net/publication/309208292}},
