--- a/common/bib/found.bib
+++ b/common/bib/found.bib
@@ -30,6 +30,7 @@
   author       = {Aristotle},
   title        = {Metaphysics Book IV},
   booktitle    = {Aristotle: Metaphysics, Books I--IX},
+  year         = {circa 350 BC},
   pages        = {146--207},
   series       = {Loeb Classical Library},
   number       = {271},
@@ -39,7 +40,8 @@
   isbn         = {0674992997},
   isbn13       = {978-0674992993},
   oclc         = {256782091},
-  url          = {http://www.perseus.tufts.edu/cgi-bin/ptext?lookup=Aristot.+Met.+4.1003a},
+  urlx         = {http://www.perseus.tufts.edu/cgi-bin/ptext?lookup=Aristot.+Met.+4.1003a},
+  url          = {https://www.perseus.tufts.edu/hopper/text?doc=Aristot.+Met.+4.1003a},
   urlg         = {http://books.google.com/books?vid=ISBN0674992997},
   urlw         = {http://www.worldcat.org/isbn/0674992997},
   urla         = {http://www.amazon.com/dp/0674992997},
@@ -1889,6 +1891,7 @@
   author       = {Mladen Pavi/>ci/'c and Norman D. Megill},
   title        = {Is Quantum Logic A Logic?},
   publisher    = {arXiv.org},
+  journal      = {arXiv.org},
   year         = {2008},
   month        = {December 15},
   pages        = {1--24},
