--- a/common/bib/order.bib
+++ b/common/bib/order.bib
@@ -1909,6 +1909,7 @@
   month        = {July 21},
   year         = {2003},
   pages        = {1--5},
+  journal      = {arXiv.org},
   url          = {http://arxiv.org/abs/math/0307284},
   }
 
