--- a/common/bib/wavelets.bib
+++ b/common/bib/wavelets.bib
@@ -787,6 +787,7 @@
   
 @incollection{zayed2004,
   editor       = {John Benedetto and Ahmed I. Zayed},
+  author       = {Ahmed I. Zayed},
   title        = {A Prelude to Sampling, Wavelets, and Tomography},
   booktitle    = {Sampling, Wavelets, and Tomography},
   publisher    = {Springer},
