--- a/common/wavelets/wavstrct.tex
+++ b/common/wavelets/wavstrct.tex
@@ -88,7 +88,8 @@ that they can be easily implemented in hardware or software by use of the
       \citor{adelson1981},
       \citer{lindeberg1993},
       \citer{alvertez1993},
-      \citer{guichard2012},
+      \citerppc{guichard2012}{23}{24}{\textsection 3.2.1  Scale-Space Extrema},
+      \citerppc{guichard20xx}{77}{78}{\textsection 5.2.1  Scale-Space Extrema},
       \citerc{weickert1999}{historical survey}
       }
     \hfill\tbox{\includegraphics{../common/math/graphics/pdfs/latmra.pdf}}%
